--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -212,5 +212,9 @@ img {
 .Button:focus {
   background-color: #303f9f;
 }
-
+.loader {
+   position: absolute;
+  left: 50%;
+  transform: translate(-50%); 
+ } 
 
